# news-cli

./: .gitignore  LICENSE  README.md  improvements.md  install.ps1  install.sh  main.py  pyproject.toml
src/: agent.py  config.py  main.py  startup.py
src/tools/: fact_check.py  scraper.py  search.py
src/ui/: briefing.py  completer.py  render.py
tests/: test_agent.py  test_agent_prompts.py  test_async_agent.py  test_completer.py  test_config.py  test_fact_check.py  test_scraper.py  test_scraper_strategies.py  test_search.py  test_search_fallback.py  test_sequential_ids.py  test_startup.py
