[project]
name = "news-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudscraper>=1.2.71",
    "crawl4ai>=0.7.8",
    "ddgs>=9.10.0",
    "httpx>=0.28.1",
    "ollama>=0.6.1",
    "playwright>=1.57.0",
    "prompt-toolkit>=3.0.52",
    "readability-lxml>=0.8.4.1",
    "rich>=14.2.0",
    "trafilatura>=2.0.0",
    "typer>=0.21.0",
]

[project.scripts]
news-cli = "src.main:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
