[project]
name = "news-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudscraper>=1.2.71",
    "ddgs>=1.0.0",
    "httpx>=0.28.1",
    "nodriver>=0.1",
    "ollama>=0.6.1",
    "prompt-toolkit>=3.0.52",
    "readability-lxml>=0.8.4.1",
    "rich>=14.2.0",
    "trafilatura>=2.0.0",
    "typer>=0.21.0",
]

[project.scripts]
news-cli = "src.main:entry_point"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
